Update pkg list

--- a/settings.yml
+++ b/settings.yml
@@ -1,2 +1,100 @@
-view: Epidemiology
-packages: []
+packages:
+- HiClimR
+- ClimProjDiags
+- qmap
+- climatrends
+- SpecsVerification
+- ClimInd
+- climateStability
+- climetrics
+- climaemet
+- cft
+- comclim
+- climwin
+- agroclim
+- hyfo
+- climate
+- kgc
+- acdcR
+- climextRemes
+- musica
+- wux
+- CENFA
+- phyloclim
+- ClimClass
+- dacc
+- CropWaterBalance
+- treeclim
+- r2dii.plot
+- r2dii.analysis
+- sedproxy
+- SCI
+- ppgm
+- MBC
+- qualypsoss
+- climenv
+- hockeystick
+- ClamR
+- climatol
+- clifro
+- CFtime
+- cropZoning
+- r2dii.match
+- nordklimdata1
+- colmozzie
+- QUALYPSO
+- EnvCpt
+- wildviz
+- dataresqc
+- futureheatwaves
+- weatherOz
+- CSTools
+- rsoi
+- mipplot
+- synoptReg
+- fruclimadapt
+- easyclimate
+- clidamonger
+- r2dii.data
+- CSIndicators
+- prism
+- crestr
+- cruts
+- rdwd
+- AlleleShift
+- paleopop
+- NUCOMBog
+- zyp
+- climdex.pcic
+- meteor
+- s2dv
+- daymetr
+- emulator
+- spdownscale
+- RMAWGEN
+- clidatajp
+- epwshiftr
+- SWTools
+- meteoForecast
+- chillR
+- ldsr
+- cmsafvis
+- chirps
+- TSS.RESTREND
+- ElevDistr
+- cmsafops
+- fxTWAPLS
+- cmsaf
+- laketemps
+- weaana
+- mtsdi
+- VFS
+- ecmwfr
+- MCTrend
+- s2dverification
+- ProfoundData
+- expDB
+- sdStaf
+- rWind
+- geodata
+- rlandfire
